--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -114,11 +114,10 @@
             </Style>
 
             <Style x:Key="AlbumItem" TargetType="Grid">
-                <Setter Property="HeightRequest" Value="220" />
-                <Setter Property="Padding" Value="6,8" />
+                <Setter Property="Padding" Value="6,6" />
                 <Setter Property="Margin" Value="0,0" />
                 <Setter Property="ColumnDefinitions" Value="40, *" />
-                <Setter Property="RowDefinitions" Value="20, 148, 20, 20" />
+                <Setter Property="RowDefinitions" Value="20, *, 20, 20" />
             </Style>
 
             <Style x:Key="AlbumHeaderTextStyle" TargetType="Label">
