--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelAlbumControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelAlbumControl.xaml
@@ -8,8 +8,11 @@
              x:DataType="vm:ChannelModel"
              >
 
-    <Border Style="{StaticResource AlbumCard}" WidthRequest="{Binding Source={RelativeSource AncestorType={x:Type favvm:FavoritesViewModel}}, Path=AlbumCardWidth}">
-        <Grid Style="{StaticResource AlbumItem}" x:Name="AlbumItem" SizeChanged="AlbumItem_SizeChanged">
+    <Border Style="{StaticResource AlbumCard}" 
+            WidthRequest="{Binding Source={RelativeSource AncestorType={x:Type favvm:FavoritesViewModel}}, Path=AlbumCardWidth}"
+            HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type favvm:FavoritesViewModel}}, Path=AlbumCardHeight}"
+            >
+        <Grid Style="{StaticResource AlbumItem}" x:Name="AlbumItem">
             <Label  Grid.Row="0"
                     Grid.ColumnSpan="2"
                     Text="{Binding Title, Mode=OneWay}"
@@ -29,8 +32,7 @@
                 x:Name="LargeMediaButton"
                 Grid.ColumnSpan="2"
                 Grid.Row="1"
-                WidthRequest="100"
-                HeightRequest="140"
+                Margin="0,4"
                 Source="{Binding Status.CurrentProgramImage.HighResolution, Mode=OneWay}"
                 Command="{Binding PlayPauseCommand, Mode=OneWay}"
                 AudioMediaState="{Binding AudioMediaState, Mode=OneWay}"
