--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelAlbumControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelAlbumControl.xaml
@@ -14,53 +14,46 @@
             >
         <Grid Style="{StaticResource AlbumItem}" x:Name="AlbumItem">
             <Label  Grid.Row="0"
-                    Grid.ColumnSpan="2"
                     Text="{Binding Title, Mode=OneWay}"
                     Style="{StaticResource AlbumHeaderTextStyle}"
-                    TextColor="{Binding ChannelColor, Converter={StaticResource StringToColorConverter}}"
-                />
+                    TextColor="{Binding ChannelColor, Converter={StaticResource StringToColorConverter}}" />
 
             <views:ChannelProgressBar 
                     Grid.Row="0"
-                    Grid.Column="0"
-                    Grid.ColumnSpan="2"
                     VerticalOptions="End"
-                    Margin="{OnPlatform WinUI='0,0,0,-2', Default='0'}"
-                    />
+                    Margin="{OnPlatform WinUI='0,0,0,-2', Default='0'}" />
 
             <views:LargeMediaButtonUserControl 
                 x:Name="LargeMediaButton"
-                Grid.ColumnSpan="2"
                 Grid.Row="1"
-                Margin="0,4"
+                Margin="0,4,0,2"
                 Source="{Binding Status.CurrentProgramImage.HighResolution, Mode=OneWay}"
                 Command="{Binding PlayPauseCommand, Mode=OneWay}"
                 AudioMediaState="{Binding AudioMediaState, Mode=OneWay}"
-                ButtonMouseOverBackgroundFill="{Binding ChannelColor, Mode=OneWay, Converter={StaticResource StringToColorConverter}}"
-            />
+                ButtonMouseOverBackgroundFill="{Binding ChannelColor, Mode=OneWay, Converter={StaticResource StringToColorConverter}}" />
 
             <Label Grid.Row="2"
-		           Grid.Column="0"
-		           Text="{Binding Status.CurrentTimePeriod.StartTimeString, Mode=OneWay}"
                    Style="{StaticResource AlbumNormalTextStyle}"
-			        />
-            <Label Grid.Row="2"
-		           Grid.Column="1"
-                   Text="{Binding Status.CurrentProgram, Mode=OneWay}"
-                   Style="{StaticResource AlbumNormalTextStyle}"
-			        />
+			        >
+                <Label.Text>
+                    <MultiBinding StringFormat="{}{0} {1}">
+                        <Binding Path="Status.CurrentTimePeriod.StartTimeString" />
+                        <Binding Path="Status.CurrentProgram" />
+                    </MultiBinding>
+                </Label.Text>
+            </Label>
+
             <Label Grid.Row="3"
-                   Grid.Column="0"
-                   Text="{Binding Status.NextTimePeriod.StartTimeString, Mode=OneWay}"
                    Style="{StaticResource AlbumNormalTextStyle}"
                    TextColor="{AppThemeBinding Dark={StaticResource InactiveProgramColorDark}, Light={StaticResource InactiveProgramColorLight}}"
-			        />
-            <Label Grid.Row="3"
-		           Grid.Column="1"
-                   Text="{Binding Status.NextProgram, Mode=OneWay}"
-		           Style="{StaticResource AlbumNormalTextStyle}"
-                   TextColor="{AppThemeBinding Dark={StaticResource InactiveProgramColorDark}, Light={StaticResource InactiveProgramColorLight}}"
-			        />
+			        >
+                <Label.Text>
+                    <MultiBinding StringFormat="{}{0} {1}">
+                        <Binding Path="Status.NextTimePeriod.StartTimeString" />
+                        <Binding Path="Status.NextProgram" />
+                    </MultiBinding>
+                </Label.Text>
+            </Label>
         </Grid>
     </Border>
 </ContentView>
