--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Recent/RecentEpisodesPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Recent/RecentEpisodesPage.xaml
@@ -17,7 +17,7 @@
     <ContentPage.Resources>
         <ResourceDictionary>
             <DataTemplate x:Key="EpisodeTemplate" x:DataType="m:RecentEpisodeModel">
-                <SwipeView Threshold="{StaticResource DefaultSwipeThreshold}" SwipeStarted="SwipeView_SwipeStarted" SwipeEnded="SwipeView_SwipeEnded">
+                <SwipeView Threshold="{StaticResource DefaultSwipeThreshold}" SwipeStarted="SwipeView_SwipeStarted" SwipeEnded="SwipeView_SwipeEnded" HeightRequest="{StaticResource ListItemHeight}">
                     <SwipeView.LeftItems>
                         <SwipeItems Mode="Execute">
                             <!--<SwipeItem Text="{x:Static r:Strings.General_AddToPlayList}"
