--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ScheduledEpisodesPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ScheduledEpisodesPage.xaml
@@ -56,7 +56,7 @@
             <CollectionView ItemsSource="{Binding Items}" x:Name="ListViewScheduledEpisodes">
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="m:SchedulesEpisodeModel">
-                        <Grid Padding="{OnPlatform WinUI='8,6,16,6', Default='16,6,16,6'}">
+                        <Grid Padding="{OnPlatform WinUI='8,6,16,6', Default='16,6,16,6'}" CompressedLayout.IsHeadless="True">
                             <VisualStateManager.VisualStateGroups>
                                 <VisualStateGroup Name="FinishedState">
                                     <VisualState Name="Finished">
