--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/EpisodeControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/EpisodeControl.xaml
@@ -6,6 +6,7 @@
              x:Class="Pekspro.RadioStorm.MAUI.Pages.Episode.EpisodeControl"
              x:DataType="vm:EpisodeModel"
              Style="{StaticResource ListItem}"
+             CompressedLayout.IsHeadless="True"
              >
 
     <!-- Column 0 is not used -->
@@ -13,6 +14,7 @@
     <Grid  Grid.Row="0" 
            Grid.Column="1" 
            Style="{StaticResource ListItemTitleArea}"
+           CompressedLayout.IsHeadless="True"
            >
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup Name="ListenState">
@@ -67,8 +69,8 @@
             Style="{StaticResource ListHeaderTextStyle}"
             MaxLines="1"
             />
-        
-        <Grid   Grid.Column="1">
+
+        <Grid Grid.Column="1" CompressedLayout.IsHeadless="True">
             <views:EpisodeDownloadStateControl 
                     HorizontalOptions="End"
                     BindingContext="{Binding }" 
@@ -78,6 +80,7 @@
 
     <Grid   Grid.Column="1"
             Grid.Row="1" 
+            CompressedLayout.IsHeadless="True"
             Style="{StaticResource ListItemContentArea}">
         <Label
             x:Name="LabelDescription"
