--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Program/FavoriteProgramAlbumControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Program/FavoriteProgramAlbumControl.xaml
@@ -6,6 +6,7 @@
              xmlns:views="clr-namespace:Pekspro.RadioStorm.MAUI.Views"
              x:Class="Pekspro.RadioStorm.MAUI.Pages.Program.FavoriteProgramAlbumControl"
              x:DataType="vm:ProgramModel"
+             Shell.PresentationMode="NotAnimated"
              >
     <VisualStateManager.VisualStateGroups>
         <VisualStateGroup Name="ListenState">
