--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Favorite/FavoritesPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Favorite/FavoritesPage.xaml
@@ -142,53 +142,66 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.ToolbarItems>
-        <c:BindableToolbarItem 
-            x:Name="ToolBarItemSynchronize"
+        <ToolbarItem 
+            x:Name="ToolbarItemSynchronize"
             x:DataType="{x:Type settingsvm:SynchronizingViewModel}"
             Command="{Binding StartFullSynchronizingCommand}"
             Text="{x:Static r:Strings.Settings_Synchronize_SyncNow}"
-            IsVisible="{Binding HasAnyRemoteSignedInProvider}"
             Order="Secondary"
             Priority="5" />
 
-        <c:BindableToolbarItem 
-                Command="{Binding UpdateCommand}"
-                Text="{x:Static r:Strings.General_Update}"
-                IsVisible="{Binding HasFavorites}"
-                Order="Secondary"
-                Priority="0" />
+        <ToolbarItem 
+            x:Name="ToolbarItemUpdate"
+            Command="{Binding UpdateCommand}"
+            Text="{x:Static r:Strings.General_Update}"
+            Order="Secondary"
+            Priority="0" />
 
-        <c:BindableToolbarItem 
+        <ToolbarItem 
                 x:Name="ToolbarItemListMode"
                 Clicked="ToolbarItemListMode_Clicked"
                 Text="{x:Static r:Strings.Favorites_ViewMode_List}"
                 Order="Secondary"
-                Priority="1">
-            <c:BindableToolbarItem.IsVisible>
-                <MultiBinding Converter="{StaticResource AndConverter}">
-                    <Binding Path="HasFavorites" />
-                    <Binding Path="HasAlbumViewSupport" />
-                </MultiBinding>
-            </c:BindableToolbarItem.IsVisible>
-        </c:BindableToolbarItem>
+                Priority="1" />
 
-        <c:BindableToolbarItem 
+        <ToolbarItem 
                 x:Name="ToolbarItemAlbumMode"
                 Clicked="ToolbarItemAlbumMode_Clicked"
                 Text="{x:Static r:Strings.Favorites_ViewMode_Album}"
                 Order="Secondary"
-                Priority="2">
-            <c:BindableToolbarItem.IsVisible>
-                <MultiBinding Converter="{StaticResource AndConverter}">
-                    <Binding Path="HasFavorites" />
-                    <Binding Path="HasAlbumViewSupport" />
-                </MultiBinding>
-            </c:BindableToolbarItem.IsVisible>
-        </c:BindableToolbarItem>
+                Priority="2" />
+
     </ContentPage.ToolbarItems>
     <!--<RefreshView Command="{Binding RefreshCommand}" IsRefreshing="{Binding IsBusy}">-->
 
     <Grid RowSpacing="0" RowDefinitions="Auto,*,Auto, Auto">
+
+        <VerticalStackLayout IsVisible="False">
+            <Switch 
+                x:Name="ToolbarHelperHasAlbumSupport"
+                Toggled="ToolbarHelper_ToggleChanged"
+                >
+                <Switch.IsToggled>
+                    <MultiBinding Converter="{StaticResource AndConverter}">
+                        <Binding Path="HasFavorites" />
+                        <Binding Path="HasAlbumViewSupport" />
+                    </MultiBinding>
+                </Switch.IsToggled>
+            </Switch>
+
+            <Switch 
+                x:Name="ToolbarHelperHasAnyRemoteSignedInProvider"
+                x:DataType="{x:Type settingsvm:SynchronizingViewModel}"
+                IsToggled="{Binding HasAnyRemoteSignedInProvider, Mode=OneWay}"
+                Toggled="ToolbarHelper_ToggleChanged"
+                />
+
+            <Switch 
+                x:Name="ToolbarHelperHasFavorites"
+                IsToggled="{Binding HasFavorites, Mode=OneWay}"
+                Toggled="ToolbarHelper_ToggleChanged"
+                />
+        </VerticalStackLayout>
 
         <Border 
             Style="{StaticResource Card}"
